--- a/src/styles/LandingPage.css
+++ b/src/styles/LandingPage.css
@@ -12,7 +12,8 @@ body {
 }
 
 /* Header styling */
-.header {
+
+.header header1 {
     background-color: #333;
     color: white;
     padding: 20px;
@@ -44,7 +45,7 @@ body {
     background-position: center;
     color: #fff;
     text-align: center;
-    padding: 50px;
+    padding: 200px;
     position: relative;
 }
 
