--- a/src/App.css
+++ b/src/App.css
@@ -35,7 +35,7 @@ body {
   min-height: 100vh;
 }
 
-.home, .photos, .videos, .about, .contact, .pricing {
+.home, .fotos, .videos, .about, .contact, .pricing {
   text-align: center;
 }
 
